# polars-bloomberg

./: .gitignore  404.html  README.md  ROADMAP.md  index.html  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  requirements.txt  robots.txt  search.html  sitemap.xml  tags.json
.github/workflows/: python-package.yml
api/: index.html
docs/: api.md  index.md
docs/examples/: credits.ipynb  equity.ipynb  macro.ipynb
docs/usage/: bdh.md  bdib.md  bdp.md  bql.md  bsrch.md
examples/: API-docs.md  Examples-1.ipynb  Examples-BQL.ipynb  Examples.ipynb
examples/credit/: at1-valuation-hero.json  at1-vs-credits-oas-hero.json  bank-CET1-vs-requirements-hero.json  equity-cushion-vs-spread-hero.json  index.html
examples/credits/: index.html
examples/equity/: index.html  mag7-market-cap-comparison-hero.json  spx-annual-returns-hero.json  spx-eps-estimates-hero.json
examples/macro/: cb-policy-rates-hero.json  hikes-cuts-count-hero.json  index.html  pe-valuations-hero.json  spx-earning-revisions-hero.json  spx-valuation-hero.html
license/: index.html
polars_bloomberg/: __init__.py  blp.py  plbbg.py
search/: search_index.json
tests/: README.md  conftest.py  test_plbbg.py
tests/data/: bdh_data_leading_nulls.yaml  bql_parse_results_axes_addcolsALL.json  bql_parse_results_dur_zspread.json  bql_parse_results_last_px.json  bql_parse_results_rets.json  bsrch_bi_tpd.csv  cols_with_NaN.json  df_lst_name_dur_zspread.yaml  df_lst_name_ema20_ema200_rsi.yaml  df_lst_name_px_last.yaml  df_lst_name_rank_oas_nxtcall.yaml  df_lst_segment_revenue.yaml  resp_bql_ax_port.json  resp_bql_ax_port.pkl  resp_bql_ax_port.yaml  resp_bql_px_last.pkl  resp_bql_px_last.yaml  response_bql_raised_exception.json  results_2px.json  results_avg_pe.json  results_axes.json  results_cpn.json  results_dur_zspread.json  results_eps_range.json  results_last_px.json  results_segment.json  results_with_NaN_DOUBLE.json
tests/integration/: test_bql.py  test_integration_bdib.py  test_integration_bdp_bdh.py  (+1 more)
(+61 files in other folders)
