[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polars-bloomberg"
version = "0.2.1"
description = "Python library providing a Polars DataFrame interface for easy and intuitive access to Bloomberg API."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
  { name = "Marek Ozana, Ph.D." }
]
dependencies = [
  "polars>=1.7.1",
  "blpapi>=3.24.0"
]
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "Topic :: Software Development :: Libraries",
  "Topic :: Office/Business :: Financial",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "jupyter",
  "altair"
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "no_bbg: mark tests that do not require a Bloomberg connection",
]